--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,6 +70,9 @@ jobs:
       - name: Build
         run: |
           cargo build --verbose
+      - name: Install
+        run: |
+          cargo build --release
           mkdir -p ${HOME}/.local/bin 
           mv target/release/pkg-builder ${HOME}/.local/bin
           chmod +x ${HOME}/.local/bin/pkg-builder
