--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,6 +79,18 @@ jobs:
           chmod +x ${HOME}/.local/bin/pkg-builder
           echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
+      - name: Install debcrafter
+        run: |
+          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
+          mkdir -p ${HOME}/.local/bin 
+          mv debcrafter ${HOME}/.local/bin
+          chmod +x ${HOME}/.local/bin/debcrafter
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Create chroot env
+        run: |
+          pkg-builder env create /pkg-builder.toml ${{matrix.language}}/hello-world/pkg-builder.toml
+          echo "${HOME}/.cache/sbuild/bookworm-amd64.tar.gz" >> $GITHUB_PATH
 
       - name: package
         run: |
