--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,7 +89,7 @@ jobs:
 
       - name: Create chroot env
         run: |
-          pkg-builder env create /pkg-builder.toml ${{matrix.language}}/hello-world/pkg-builder.toml
+          pkg-builder env create ${{matrix.language}}/hello-world/pkg-builder.toml
           echo "${HOME}/.cache/sbuild/bookworm-amd64.tar.gz" >> $GITHUB_PATH
 
       - name: package
