--- a/examples/jammy/git-package/nimbus/pkg-builder.toml
+++ b/examples/jammy/git-package/nimbus/pkg-builder.toml
@@ -75,6 +75,10 @@ debcrafter_version = "latest"
 run_lintian=false
 run_piuparts=false
 run_autopkgtest=false
+lintian_version="2.116.3"
+piuparts_version="1.1.7"
+autopkgtest_version="5.28"
+sbuild_version="0.85.6"
 # package directory
 workdir="~/.pkg-builder/packages"
 
