--- a/examples/bookworm/javascript/hello-world/pkg-builder.toml
+++ b/examples/bookworm/javascript/hello-world/pkg-builder.toml
@@ -31,4 +31,4 @@ piuparts_version="1.1.7"
 autopkgtest_version="5.28"
 sbuild_version="0.85.6"
 # package directory
-workdir="~/.pkg-builder/packages"
+workdir="~/.pkg-builder/packages/bookworm"
