feat: change dir setup

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -196,6 +196,7 @@ jobs:
       - name: autopkgtest
         run: |
           apt list --installed autopkgtest
+          apt-cache madison autopkgtest
           sudo cp -R ${HOME}/.pkg-builder /root
           cd examples/jammy/${{matrix.language}}/hello-world
           sudo ${HOME}/.local/bin/pkg-builder autopkgtest
