--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -265,6 +265,7 @@ jobs:
         run: |
           cd examples/noble/${{matrix.language}}/hello-world
           sudo ${HOME}/.local/bin/pkg-builder env create 
+          sudo systemctl restart schroot
           echo "${HOME}/.cache/sbuild/noble-amd64.tar.gz" >> $GITHUB_PATH
 
       - name: package
