--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -266,6 +266,8 @@ jobs:
           cd examples/noble/${{matrix.language}}/hello-world
           sudo ${HOME}/.local/bin/pkg-builder env create 
           sudo systemctl restart schroot
+          # First will fail, try again
+          ${HOME}/.local/bin/pkg-builder env create 
           echo "${HOME}/.cache/sbuild/noble-amd64.tar.gz" >> $GITHUB_PATH
 
       - name: package
