--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -267,7 +267,7 @@ jobs:
       - name: Create chroot env
         run: |
           cd examples/noble/${{matrix.language}}/hello-world
-          sysctl -w kernel.unprivileged_userns_clone=1
+          sudo sysctl -w kernel.unprivileged_userns_clone=1
           sudo ln -s /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
           # sudo ${HOME}/.local/bin/pkg-builder env create 
           # First will fail, try again
