--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,178 +35,178 @@ jobs:
       - name: Run unit tests
         run: cargo test --lib --verbose
 
-#  bookworm_packaging:
-#    runs-on: ubuntu-latest
-#
-#    strategy:
-#      matrix:
-#        language:
-#          - virtual
-#          - c
-#          - dotnet
-#          - go
-#          - java
-#          - javascript
-#          - nim
-#          - rust
-#          - typescript
-#          - java-gradle
-#      fail-fast: false
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Sbuild setup
-#        run: |
-#          sudo apt-get update
-#          # Note this is an older version of sbuild, no need to patch it, yet
-#          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest vmdb2 qemu-system-x86
-#          sudo apt-get install -y pkg-config libssl-dev uidmap
-#          sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
-#          # change this into actually built version and cache it
-#          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
-#          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
-#          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
-#
-#      - name: Build
-#        run: |
-#          cargo build --verbose
-#
-#      - name: Install
-#        run: |
-#          cargo build --release
-#          mkdir -p ${HOME}/.local/bin
-#          mv target/release/pkg-builder ${HOME}/.local/bin
-#          chmod +x ${HOME}/.local/bin/pkg-builder
-#          echo "${HOME}/.local/bin" >> $GITHUB_PATH
-#
-#      - name: Install debcrafter
-#        run: |
-#          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
-#          mkdir -p ${HOME}/.local/bin
-#          mv debcrafter ${HOME}/.local/bin
-#          chmod +x ${HOME}/.local/bin/debcrafter
-#          echo "${HOME}/.local/bin" >> $GITHUB_PATH
-#
-#      - name: Create chroot env
-#        run: |
-#          cd examples/bookworm/${{matrix.language}}/hello-world
-#          pkg-builder env create
-#          echo "${HOME}/.cache/sbuild/bookworm-amd64.tar.gz" >> $GITHUB_PATH
-#
-#      - name: package
-#        run: |
-#          cd examples/bookworm/${{matrix.language}}/hello-world
-#          pkg-builder package --run-piuparts false --run-autopkgtest false --run-lintian false
-#
-#
-#      - name: piuparts
-#        run: |
-#          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
-#          # sudo apt-get install -y debian-archive-keyring
-#          cd examples/bookworm/${{matrix.language}}/hello-world
-#          ${HOME}/.local/bin/pkg-builder piuparts
-#
+  bookworm_packaging:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        language:
+          - virtual
+          - c
+          - dotnet
+          - go
+          - java
+          - javascript
+          - nim
+          - rust
+          - typescript
+          - java-gradle
+      fail-fast: false
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Sbuild setup
+        run: |
+          sudo apt-get update
+          # Note this is an older version of sbuild, no need to patch it, yet
+          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest vmdb2 qemu-system-x86
+          sudo apt-get install -y pkg-config libssl-dev uidmap
+          sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
+          # change this into actually built version and cache it
+          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
+          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
+          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
+
+      - name: Build
+        run: |
+          cargo build --verbose
+
+      - name: Install
+        run: |
+          cargo build --release
+          mkdir -p ${HOME}/.local/bin
+          mv target/release/pkg-builder ${HOME}/.local/bin
+          chmod +x ${HOME}/.local/bin/pkg-builder
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Install debcrafter
+        run: |
+          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
+          mkdir -p ${HOME}/.local/bin
+          mv debcrafter ${HOME}/.local/bin
+          chmod +x ${HOME}/.local/bin/debcrafter
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Create chroot env
+        run: |
+          cd examples/bookworm/${{matrix.language}}/hello-world
+          pkg-builder env create
+          echo "${HOME}/.cache/sbuild/bookworm-amd64.tar.gz" >> $GITHUB_PATH
+
+      - name: package
+        run: |
+          cd examples/bookworm/${{matrix.language}}/hello-world
+          pkg-builder package --run-piuparts false --run-autopkgtest false --run-lintian false
+
+
+      - name: piuparts
+        run: |
+          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+          # sudo apt-get install -y debian-archive-keyring
+          cd examples/bookworm/${{matrix.language}}/hello-world
+          ${HOME}/.local/bin/pkg-builder piuparts
+
+      - name: autopkgtest
+        run: |
+          sudo cp -R ${HOME}/.pkg-builder /root
+          apt list --installed autopkgtest
+          cd examples/bookworm/${{matrix.language}}/hello-world
+          sudo ${HOME}/.local/bin/pkg-builder autopkgtest
+
+      - name: verify
+        run: |
+          cd examples/bookworm/${{matrix.language}}/hello-world
+          ${HOME}/.local/bin/pkg-builder verify  --no-package true
+
+
+
+
+  jammy_packaging:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        language:
+          - virtual
+          - c
+          - dotnet
+          - go
+          - java
+          - javascript
+          - nim
+          - rust
+          - typescript
+          - java-gradle
+      fail-fast: false
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Sbuild setup
+        run: |
+          sudo apt-get update
+          # Note this is an older version of sbuild, no need to patch it, yet
+          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest vmdb2 qemu-system-x86
+          sudo apt-get install -y pkg-config libssl-dev uidmap
+          sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
+          # change this into actually built version and cache it
+          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
+          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
+          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
+
+      - name: Build
+        run: |
+          cargo build --verbose
+
+      - name: Install
+        run: |
+          cargo build --release
+          mkdir -p ${HOME}/.local/bin
+          mv target/release/pkg-builder ${HOME}/.local/bin
+          chmod +x ${HOME}/.local/bin/pkg-builder
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Install debcrafter
+        run: |
+          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
+          mkdir -p ${HOME}/.local/bin
+          mv debcrafter ${HOME}/.local/bin
+          chmod +x ${HOME}/.local/bin/debcrafter
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Create chroot env
+        run: |
+          cd examples/jammy/${{matrix.language}}/hello-world
+          pkg-builder env create
+          echo "${HOME}/.cache/sbuild/noble-amd64.tar.gz" >> $GITHUB_PATH
+
+      - name: package
+        run: |
+          cd examples/jammy/${{matrix.language}}/hello-world
+          pkg-builder package --run-piuparts false --run-autopkgtest false --run-lintian false
+
+
+      - name: piuparts
+        run: |
+          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+          # sudo apt-get install -y debian-archive-keyring
+          cd examples/jammy/${{matrix.language}}/hello-world
+          ${HOME}/.local/bin/pkg-builder piuparts
+
+# most likely Github Actions have again, package problem like one or two weeks ago
 #      - name: autopkgtest
 #        run: |
-#          sudo cp -R ${HOME}/.pkg-builder /root
 #          apt list --installed autopkgtest
-#          cd examples/bookworm/${{matrix.language}}/hello-world
+#          apt-cache madison autopkgtest
+#          sudo cp -R ${HOME}/.pkg-builder /root
+#          cd examples/jammy/${{matrix.language}}/hello-world
 #          sudo ${HOME}/.local/bin/pkg-builder autopkgtest
-#
-#      - name: verify
-#        run: |
-#          cd examples/bookworm/${{matrix.language}}/hello-world
-#          ${HOME}/.local/bin/pkg-builder verify  --no-package true
-#
 
-
-
-#  jammy_packaging:
-#    runs-on: ubuntu-latest
-#
-#    strategy:
-#      matrix:
-#        language:
-#          - virtual
-#          - c
-#          - dotnet
-#          - go
-#          - java
-#          - javascript
-#          - nim
-#          - rust
-#          - typescript
-#          - java-gradle
-#      fail-fast: false
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Sbuild setup
-#        run: |
-#          sudo apt-get update
-#          # Note this is an older version of sbuild, no need to patch it, yet
-#          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest vmdb2 qemu-system-x86
-#          sudo apt-get install -y pkg-config libssl-dev uidmap
-#          sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
-#          # change this into actually built version and cache it
-#          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
-#          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
-#          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
-#
-#      - name: Build
-#        run: |
-#          cargo build --verbose
-#
-#      - name: Install
-#        run: |
-#          cargo build --release
-#          mkdir -p ${HOME}/.local/bin
-#          mv target/release/pkg-builder ${HOME}/.local/bin
-#          chmod +x ${HOME}/.local/bin/pkg-builder
-#          echo "${HOME}/.local/bin" >> $GITHUB_PATH
-#
-#      - name: Install debcrafter
-#        run: |
-#          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
-#          mkdir -p ${HOME}/.local/bin
-#          mv debcrafter ${HOME}/.local/bin
-#          chmod +x ${HOME}/.local/bin/debcrafter
-#          echo "${HOME}/.local/bin" >> $GITHUB_PATH
-#
-#      - name: Create chroot env
-#        run: |
-#          cd examples/jammy/${{matrix.language}}/hello-world
-#          pkg-builder env create
-#          echo "${HOME}/.cache/sbuild/noble-amd64.tar.gz" >> $GITHUB_PATH
-#
-#      - name: package
-#        run: |
-#          cd examples/jammy/${{matrix.language}}/hello-world
-#          pkg-builder package --run-piuparts false --run-autopkgtest false --run-lintian false
-#
-#
-#      - name: piuparts
-#        run: |
-#          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
-#          # sudo apt-get install -y debian-archive-keyring
-#          cd examples/jammy/${{matrix.language}}/hello-world
-#          ${HOME}/.local/bin/pkg-builder piuparts
-#
-## most likely Github Actions have again, package problem like one or two weeks ago
-##      - name: autopkgtest
-##        run: |
-##          apt list --installed autopkgtest
-##          apt-cache madison autopkgtest
-##          sudo cp -R ${HOME}/.pkg-builder /root
-##          cd examples/jammy/${{matrix.language}}/hello-world
-##          sudo ${HOME}/.local/bin/pkg-builder autopkgtest
-#
-#      - name: verify
-#        run: |
-#          cd examples/jammy/${{matrix.language}}/hello-world
-#          ${HOME}/.local/bin/pkg-builder verify --no-package true
+      - name: verify
+        run: |
+          cd examples/jammy/${{matrix.language}}/hello-world
+          ${HOME}/.local/bin/pkg-builder verify --no-package true
   
 
   noble_packaging:
@@ -288,13 +288,13 @@ jobs:
           cd examples/noble/${{matrix.language}}/hello-world
           ${HOME}/.local/bin/pkg-builder piuparts
 
-      - name: autopkgtest
-        run: |
-          apt list --installed autopkgtest
-          apt-cache madison autopkgtest
-          sudo cp -R ${HOME}/.pkg-builder /root
-          cd examples/noble/${{matrix.language}}/hello-world
-          sudo ${HOME}/.local/bin/pkg-builder autopkgtest
+#      - name: autopkgtest
+#        run: |
+#          apt list --installed autopkgtest
+#          apt-cache madison autopkgtest
+#          sudo cp -R ${HOME}/.pkg-builder /root
+#          cd examples/noble/${{matrix.language}}/hello-world
+#          sudo ${HOME}/.local/bin/pkg-builder autopkgtest
 
       - name: verify
         run: |
