--- a/examples/noble/c/hello-world/src/debian/rules
+++ b/examples/noble/c/hello-world/src/debian/rules
@@ -9,3 +9,6 @@ override_dh_auto_install:
 	# This relies on make install script
 	# if there is no install script, you have define your own rules
 	dh_auto_install -- prefix=/usr
+
+override_dh_strip:
+	dh_strip --no-automatic-dbgsym
