--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,90 +35,90 @@ jobs:
       - name: Run unit tests
         run: cargo test --lib --verbose
 
-  bookworm_packaging:
-    runs-on: ubuntu-latest
+  # bookworm_packaging:
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        language:
-          - virtual
-          - c
-          - dotnet
-          - go
-          - java
-          - javascript
-          - nim
-          - rust
-          - typescript
-          - java-gradle
-      fail-fast: false
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   strategy:
+  #     matrix:
+  #       language:
+  #         - virtual
+  #         - c
+  #         - dotnet
+  #         - go
+  #         - java
+  #         - javascript
+  #         - nim
+  #         - rust
+  #         - typescript
+  #         - java-gradle
+  #     fail-fast: false
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Sbuild setup
-        run: |
-          sudo apt-get update
-          # Note this is an older version of sbuild, no need to patch it, yet
-          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest vmdb2 qemu-system-x86
-          sudo apt-get install -y pkg-config libssl-dev uidmap
-          sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
-          # change this into actually built version and cache it
-          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
-          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
-          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
+  #     - name: Sbuild setup
+  #       run: |
+  #         sudo apt-get update
+  #         # Note this is an older version of sbuild, no need to patch it, yet
+  #         sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest vmdb2 qemu-system-x86
+  #         sudo apt-get install -y pkg-config libssl-dev uidmap
+  #         sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
+  #         # change this into actually built version and cache it
+  #         wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
+  #         wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
+  #         sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
 
-      - name: Build
-        run: |
-          cargo build --verbose
+  #     - name: Build
+  #       run: |
+  #         cargo build --verbose
 
-      - name: Install
-        run: |
-          cargo build --release
-          mkdir -p ${HOME}/.local/bin
-          mv target/release/pkg-builder ${HOME}/.local/bin
-          chmod +x ${HOME}/.local/bin/pkg-builder
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+  #     - name: Install
+  #       run: |
+  #         cargo build --release
+  #         mkdir -p ${HOME}/.local/bin
+  #         mv target/release/pkg-builder ${HOME}/.local/bin
+  #         chmod +x ${HOME}/.local/bin/pkg-builder
+  #         echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
-      - name: Install debcrafter
-        run: |
-          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
-          mkdir -p ${HOME}/.local/bin
-          mv debcrafter ${HOME}/.local/bin
-          chmod +x ${HOME}/.local/bin/debcrafter
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+  #     - name: Install debcrafter
+  #       run: |
+  #         wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
+  #         mkdir -p ${HOME}/.local/bin
+  #         mv debcrafter ${HOME}/.local/bin
+  #         chmod +x ${HOME}/.local/bin/debcrafter
+  #         echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
-      - name: Create chroot env
-        run: |
-          cd examples/bookworm/${{matrix.language}}/hello-world
-          pkg-builder env create
-          echo "${HOME}/.cache/sbuild/bookworm-amd64.tar.gz" >> $GITHUB_PATH
+  #     - name: Create chroot env
+  #       run: |
+  #         cd examples/bookworm/${{matrix.language}}/hello-world
+  #         pkg-builder env create
+  #         echo "${HOME}/.cache/sbuild/bookworm-amd64.tar.gz" >> $GITHUB_PATH
 
-      - name: package
-        run: |
-          cd examples/bookworm/${{matrix.language}}/hello-world
-          pkg-builder package --run-piuparts false  --run-autopkgtest false
-
-
-      - name: piuparts
-        run: |
-          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
-          # sudo apt-get install -y debian-archive-keyring
-          cd examples/bookworm/${{matrix.language}}/hello-world
-          ${HOME}/.local/bin/pkg-builder piuparts
-
-      - name: autopkgtest
-        run: |
-          sudo cp -R ${HOME}/.pkg-builder /root
-          apt list --installed autopkgtest
-          cd examples/bookworm/${{matrix.language}}/hello-world
-          sudo ${HOME}/.local/bin/pkg-builder autopkgtest
+  #     - name: package
+  #       run: |
+  #         cd examples/bookworm/${{matrix.language}}/hello-world
+  #         pkg-builder package --run-piuparts false  --run-autopkgtest false
 
 
-      - name: verify
-        run: |
-          cd examples/bookworm/${{matrix.language}}/hello-world
-          ${HOME}/.local/bin/pkg-builder verify  --no-package true
+  #     - name: piuparts
+  #       run: |
+  #         # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+  #         # sudo apt-get install -y debian-archive-keyring
+  #         cd examples/bookworm/${{matrix.language}}/hello-world
+  #         ${HOME}/.local/bin/pkg-builder piuparts
+
+  #     - name: autopkgtest
+  #       run: |
+  #         sudo cp -R ${HOME}/.pkg-builder /root
+  #         apt list --installed autopkgtest
+  #         cd examples/bookworm/${{matrix.language}}/hello-world
+  #         sudo ${HOME}/.local/bin/pkg-builder autopkgtest
+
+
+  #     - name: verify
+  #       run: |
+  #         cd examples/bookworm/${{matrix.language}}/hello-world
+  #         ${HOME}/.local/bin/pkg-builder verify  --no-package true
 
 
 
@@ -209,94 +209,94 @@ jobs:
           ${HOME}/.local/bin/pkg-builder verify --no-package true
   
 
-  noble_packaging:
-    runs-on: ubuntu-latest
+  # noble_packaging:
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        language:
-          - virtual
-          - c
-          - dotnet
-          - go
-          - java
-          - javascript
-          - nim
-          - rust
-          - typescript
-          - java-gradle
-      fail-fast: false
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   strategy:
+  #     matrix:
+  #       language:
+  #         - virtual
+  #         - c
+  #         - dotnet
+  #         - go
+  #         - java
+  #         - javascript
+  #         - nim
+  #         - rust
+  #         - typescript
+  #         - java-gradle
+  #     fail-fast: false
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Sbuild setup
-        run: |
-          sudo apt-get update
-          # Note this is an older version of sbuild, no need to patch it, yet
-          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest=5.20 vmdb2 qemu-system-x86
-          sudo apt-get install -y pkg-config libssl-dev uidmap
-          sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
-          # change this into actually built version and cache it
-          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
-          wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
-          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
-          sudo sbuild-adduser `whoami`
-          newgrp sbuild
+  #     - name: Sbuild setup
+  #       run: |
+  #         sudo apt-get update
+  #         # Note this is an older version of sbuild, no need to patch it, yet
+  #         sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest=5.20 vmdb2 qemu-system-x86
+  #         sudo apt-get install -y pkg-config libssl-dev uidmap
+  #         sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
+  #         # change this into actually built version and cache it
+  #         wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
+  #         wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/libsbuild-perl_0.85.6_all.deb
+  #         sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
+  #         sudo sbuild-adduser `whoami`
+  #         newgrp sbuild
 
-      - name: Build
-        run: |
-          cargo build --verbose
+  #     - name: Build
+  #       run: |
+  #         cargo build --verbose
 
-      - name: Install
-        run: |
-          cargo build --release
-          mkdir -p ${HOME}/.local/bin 
-          mv target/release/pkg-builder ${HOME}/.local/bin
-          chmod +x ${HOME}/.local/bin/pkg-builder
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+  #     - name: Install
+  #       run: |
+  #         cargo build --release
+  #         mkdir -p ${HOME}/.local/bin 
+  #         mv target/release/pkg-builder ${HOME}/.local/bin
+  #         chmod +x ${HOME}/.local/bin/pkg-builder
+  #         echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
-      - name: Install debcrafter
-        run: |
-          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
-          mkdir -p ${HOME}/.local/bin 
-          mv debcrafter ${HOME}/.local/bin
-          chmod +x ${HOME}/.local/bin/debcrafter
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+  #     - name: Install debcrafter
+  #       run: |
+  #         wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
+  #         mkdir -p ${HOME}/.local/bin 
+  #         mv debcrafter ${HOME}/.local/bin
+  #         chmod +x ${HOME}/.local/bin/debcrafter
+  #         echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
-      - name: Create chroot env
-        run: |
-          cd examples/noble/${{matrix.language}}/hello-world
-          sudo sysctl -w kernel.unprivileged_userns_clone=1
-          sudo ln -s /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
-          # sudo ${HOME}/.local/bin/pkg-builder env create 
-          # First will fail, try again
-          #sudo cat /etc/subuid
-          pkg-builder env create 
-          echo "${HOME}/.cache/sbuild/noble-amd64.tar.gz" >> $GITHUB_PATH
+  #     - name: Create chroot env
+  #       run: |
+  #         cd examples/noble/${{matrix.language}}/hello-world
+  #         sudo sysctl -w kernel.unprivileged_userns_clone=1
+  #         sudo ln -s /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
+  #         # sudo ${HOME}/.local/bin/pkg-builder env create 
+  #         # First will fail, try again
+  #         #sudo cat /etc/subuid
+  #         pkg-builder env create 
+  #         echo "${HOME}/.cache/sbuild/noble-amd64.tar.gz" >> $GITHUB_PATH
 
-      - name: package
-        run: |
-          cd examples/noble/${{matrix.language}}/hello-world
-          pkg-builder package --run-piuparts false  --run-autopkgtest false
-
-
-      - name: piuparts
-        run: |
-          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
-          # sudo apt-get install -y debian-archive-keyring
-          cd examples/noble/${{matrix.language}}/hello-world
-          ${HOME}/.local/bin/pkg-builder piuparts
-
-      - name: autopkgtest
-        run: |
-         sudo cp -R ${HOME}/.pkg-builder /root
-         apt list --installed autopkgtest
-         cd examples/noble/${{matrix.language}}/hello-world
-         sudo ${HOME}/.local/bin/pkg-builder autopkgtest
+  #     - name: package
+  #       run: |
+  #         cd examples/noble/${{matrix.language}}/hello-world
+  #         pkg-builder package --run-piuparts false  --run-autopkgtest false
 
 
-      - name: verify
-        run: |
-          cd examples/noble/${{matrix.language}}/hello-world
-          ${HOME}/.local/bin/pkg-builder verify --no-package true 
+  #     - name: piuparts
+  #       run: |
+  #         # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+  #         # sudo apt-get install -y debian-archive-keyring
+  #         cd examples/noble/${{matrix.language}}/hello-world
+  #         ${HOME}/.local/bin/pkg-builder piuparts
+
+  #     - name: autopkgtest
+  #       run: |
+  #        sudo cp -R ${HOME}/.pkg-builder /root
+  #        apt list --installed autopkgtest
+  #        cd examples/noble/${{matrix.language}}/hello-world
+  #        sudo ${HOME}/.local/bin/pkg-builder autopkgtest
+
+
+  #     - name: verify
+  #       run: |
+  #         cd examples/noble/${{matrix.language}}/hello-world
+  #         ${HOME}/.local/bin/pkg-builder verify --no-package true 
