--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -270,7 +270,7 @@ jobs:
         run: |
           cd examples/noble/${{matrix.language}}/hello-world
           sudo sysctl -w kernel.unprivileged_userns_clone=1
-          sudo ln -s /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
+          #sudo ln -s /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
           # sudo ${HOME}/.local/bin/pkg-builder env create 
           # First will fail, try again
           #sudo cat /etc/subuid
