--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "pkg-builder"
-version = "0.2.7"
+version = "0.2.8"
 edition = "2021"
+build = "src/build.rs"
+
+[build-dependencies]
+eyre = "0.6.12"
+thiserror = "1.0.63"
+serde = { version = "1.0.209", features = ["derive"] }
+toml = "0.8.19"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
