--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -159,15 +159,9 @@ jobs:
           cargo build --release
           mkdir -p ${HOME}/.local/bin
           mv target/release/pkg-builder ${HOME}/.local/bin
+          # add to path the prebuilt debcrafter binaries as well
+          cp bin_dependencies/debcrafter_* ${HOME}/.local/bin
           chmod +x ${HOME}/.local/bin/pkg-builder
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
-
-      - name: Install debcrafter
-        run: |
-          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
-          mkdir -p ${HOME}/.local/bin
-          mv debcrafter ${HOME}/.local/bin
-          chmod +x ${HOME}/.local/bin/debcrafter
           echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Create chroot env
@@ -249,17 +243,11 @@ jobs:
       - name: Install
         run: |
           cargo build --release
-          mkdir -p ${HOME}/.local/bin 
+          mkdir -p ${HOME}/.local/bin
           mv target/release/pkg-builder ${HOME}/.local/bin
+          # add to path the prebuilt debcrafter binaries as well
+          cp bin_dependencies/debcrafter_* ${HOME}/.local/bin
           chmod +x ${HOME}/.local/bin/pkg-builder
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
-
-      - name: Install debcrafter
-        run: |
-          wget -q https://github.com/eth-pkg/pkg-builder/releases/download/v0.1/debcrafter
-          mkdir -p ${HOME}/.local/bin 
-          mv debcrafter ${HOME}/.local/bin
-          chmod +x ${HOME}/.local/bin/debcrafter
           echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Create chroot env
