--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
           - rust
           - typescript
           - virtual
-          #- python
+          - python
       fail-fast: false
     steps:
       - name: Checkout code
@@ -215,7 +215,7 @@ jobs:
           - rust
           - typescript
           - virtual
-          #- python
+          - python
       fail-fast: false
     steps:
       - name: Checkout code
