fix: dotnet backup requiring other packages

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -207,6 +207,7 @@ jobs:
         language:
           - c
           - dotnet
+          - dotnet-9
           - go
           - java
           - java-gradle
