fix: pkg-builder path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ members = [
     "workspace/cli",
     "workspace/common",
     "workspace/debian",
-    "workspace/pkg-builder",
+    "workspace/pkg_builder",
 ]
 resolver = "2"
