--- a/workspace/debian/Cargo.toml
+++ b/workspace/debian/Cargo.toml
@@ -8,6 +8,7 @@ name = "debian"
 path = "src/mod.rs"  
 
 [dependencies]
-eyre = "0.6.12"
+common = { path = "../common" }
 log = "0.4"
 shellexpand = "3.1.0"
+thiserror = "1.0"
