--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,35 @@ members = [
     "workspace/pkg_builder",
 ]
 resolver = "2"
+
+[workspace.package]
+edition = "2021"
+
+
+[workspace.dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
+toml = "0.8.12"
+serde = { version = "1.0", features = ["derive"] }
+env_logger = "0.11.3"
+log = "0.4"
+cargo_metadata = "0.18"
+regex = "1.10.4"
+thiserror = "1.0"
+shellexpand = "3.1.0"
+tempfile = "3.1"
+git2 = "0.18.3"
+test-case = "3.3.1"
+glob = "0.3.1"
+dirs = "5.0.1"
+rand = "0.9.0-alpha.1"
+sha2 = "0.11.0-pre.3"
+whoami = "1.5.1"
+sha1 = "0.11.0-pre.3"
+filetime = "0.2.23"
+
+
+# Local crates
+cli = {path = "workspace/cli"}
+debian = {path = "workspace/debian"}
+packager_deb = {path = "workspace/packager_deb"}
+types = {path = "workspace/types"}
