--- a/workspace/packager_deb/Cargo.toml
+++ b/workspace/packager_deb/Cargo.toml
@@ -8,32 +8,32 @@ name = "packager_deb"
 path = "src/mod.rs"
 
 [build-dependencies]
-thiserror = "1.0.63"
-serde = { version = "1.0.209", features = ["derive"] }
-toml = "0.8.19"
+thiserror = { workspace =  true }
+serde = { workspace =  true }
+toml = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-debian = { path = "../debian" }
-types = { path = "../types" }
-toml = "0.8.12"
-serde = { version = "1.0", features = ["derive"] }
-thiserror = "1.0"
-tempfile = "3.1"
-log = "0.4"
-env_logger = "0.11.3"
-git2 = "0.18.3"
-test-case = "3.3.1"
-glob = "0.3.1"
-dirs = "5.0.1"
-rand = "0.9.0-alpha.1"
-shellexpand = "3.1.0"
-sha2 = "0.11.0-pre.3"
-whoami = "1.5.1"
-sha1 = "0.11.0-pre.3"
-filetime = "0.2.23"
-cargo_metadata = "0.18"
+debian = { workspace = true}
+types = { workspace = true}
+toml = { workspace = true}
+serde = { workspace = true}
+thiserror = { workspace = true}
+tempfile = { workspace = true}
+log = { workspace = true}
+env_logger = { workspace = true}
+git2 = { workspace = true}
+test-case = { workspace = true}
+glob = { workspace = true}
+dirs = { workspace = true}
+rand = { workspace = true}
+shellexpand = { workspace = true}
+sha2 = { workspace = true}
+whoami = { workspace = true}
+sha1 = { workspace = true}
+filetime = { workspace = true}
+cargo_metadata = { workspace = true}
 
 
 [dev-dependencies]
