--- a/workspace/pkg_builder/Cargo.toml
+++ b/workspace/pkg_builder/Cargo.toml
@@ -15,4 +15,4 @@ serde = { version = "1.0.209", features = ["derive"] }
 toml = "0.8.19"
 
 [dependencies]
-cli = { path = "../cli" }
+cli = { workspace =  true }
