--- a/workspace/types/Cargo.toml
+++ b/workspace/types/Cargo.toml
@@ -8,6 +8,6 @@ name = "types"
 path = "src/mod.rs"  
 
 [dependencies]
-toml = "0.8.12"
-serde = { version = "1.0", features = ["derive"] }
-thiserror = "1.0"
+toml = { workspace = true}
+serde ={ workspace = true}
+thiserror = { workspace = true}
